--- a/package.json
+++ b/package.json
@@ -15,13 +15,14 @@
         "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "cryptr": "^6.0.3",
+        "dotenv": "^16.1.4",
         "express": "^4.17.1",
         "firebase": "^9.21.0",
         "firebase-admin": "^11.8.0",
         "firebase-functions": "^4.4.0",
         "mongodb": "^3.2.7",
         "socket.io": "^4.2.0",
-        "twilio": "^4.11.0"
+        "twilio": "^4.11.2"
     },
     "devDependencies": {
         "nodemon": "1.18.10"
